# practicaJulian

./: CONCEPTS.md  EXERCISE.md  docker-compose.yml  paraAPI.txt  pyproject.toml
app/: categories.py  categorize.py  classifier.py  database.py  human_review.py  load_data.py  main.py  models.py
data/: preguntas_ejemplo.json
static/: index.html
